hydran-847: Return reason when not valid mailbox
